src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Hide_Survey_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Hide Survey Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Questions_to_Display__c</fullName>
        <label>Selected Questions to Display</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_Response__c</fullName>
        <description>Message to be displayed to the user when the Survey has been submitted</description>
        <inlineHelpText>Message to be displayed to the user when the Survey has been submitted</inlineHelpText>
        <label>Submit Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Container_CSS__c</fullName>
        <label>Survey Container CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Header__c</fullName>
        <label>Survey Header</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Survey_Question_10__c</fullName>
        <label>Survey Question 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Question_1__c</fullName>
        <label>Survey Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Question_2__c</fullName>
        <label>Survey Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Response_10__c</fullName>
        <label>Survey Response 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Response_1__c</fullName>
        <label>Survey Response 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Response_2__c</fullName>
        <label>Survey Response 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Thank_You_Text__c</fullName>
        <label>Thank You Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <defaultValue>&quot;Undefined&quot;</defaultValue>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankYouLink__c</fullName>
        <label>Thank You Link</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankYouText__c</fullName>
        <label>Thank You Text</label>
        <type>TextArea</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>MBK_Standard_View</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>MBK Standard View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>standard_view</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>standard view</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Central</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>